Fix: add dark mode color for card body

--- a/assets/scss/common/_cards.scss
+++ b/assets/scss/common/_cards.scss
@@ -20,3 +20,7 @@
   margin-top: 2px;
   margin-bottom: 1em;
 }
+
+[data-dark-mode] .card-body {
+  color: $body-color-dark;
+}
